--- a/style.css
+++ b/style.css
@@ -1,223 +1,311 @@
-@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lobster&family=Permanent+Marker&family=Sedgwick+Ave+Display&family=Ubuntu&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&family=Lobster&family=Permanent+Marker&family=Sedgwick+Ave+Display&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500&family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&family=Lobster&family=Permanent+Marker&family=Poppins:wght@200&family=Sedgwick+Ave+Display&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500&family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&family=Lobster&family=Permanent+Marker&family=Poppins&family=Sedgwick+Ave+Display&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500&family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&family=Lobster&family=Permanent+Marker&family=Poppins:wght@600&family=Sedgwick+Ave+Display&family=Ubuntu&display=swap');
 *{
     padding: 0px;
     margin: 0px;
 }
 body{
-    width: 1440px;
+    background-color: hsl(0, 0%, 98%);
 }
-.container{
-    display:flex;
+.title{
+    text-align: center;
+    color: hsl(229, 6%, 66%);
+    margin-top: 20px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-family: 'Big Shoulders Display', sans-serif;
+    font-family: 'Lexend Deca', sans-serif;
+    font-family: 'Lobster', sans-serif;
+    font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Sedgwick Ave Display', cursive;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight:100;
+    font-size: 30px;
+}
+.tit{
+    text-align: center;
+    color: hsl(234, 12%, 34%);
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-family: 'Big Shoulders Display', sans-serif;
+    font-family: 'Lexend Deca', sans-serif;
+    font-family: 'Lobster', sans-serif;
+    font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Sedgwick Ave Display', cursive;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 35px;
+    font-weight: 600;
+    
+}
+p{
+    text-align: center;
+    color: hsl(229, 6%, 66%);
+    font-size: 15px;
+    margin-top: 10px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-family: 'Big Shoulders Display', sans-serif;
+    font-family: 'Lexend Deca', sans-serif;
+    font-family: 'Lobster', sans-serif;
+    font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Sedgwick Ave Display', cursive;
+    font-family: 'Ubuntu', sans-serif;
+    width: 45%;
+    margin-left: 290px;
+    line-height: 20px;
+}
+.hight{
+    display: flex;
     align-items: center;
-    justify-content: center;
-    margin-top: 100px;
-    width: 95%;
-    height: 500px;
-    margin-left: 50px auto;
+    margin-top: 50px;
+    flex-direction: column;
 }
-.sedans{
-    width: 19%;
-    background-color: hsl(31, 77%, 52%);
-    height: 390px;
-    border-top-left-radius: 7px;
-    border-bottom-left-radius: 7px;
+.hi{
+    border-top: 4px solid hsl(0, 78%, 62%);
+    background-color: white;
+    width: 27%;
+    border-radius: 8px;
+    height: 210px;
+    filter: drop-shadow(3px 5px 7px rgba(161, 161, 161, 0.7));
+    margin-bottom: 20px;  
 }
-.sedans svg{
-    margin: 30px 35px;
+.hi svg{
+    margin-left:270px;
+    margin-top: 25px;
 }
-.sedans h2{
-    color: hsl(0, 0%, 95%);
-    margin: 0px 35px;
+.hi p{
+    margin-top: 10px;
+    margin-left: 30px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
     font-family: 'Big Shoulders Display', sans-serif;
     font-family: 'Lexend Deca', sans-serif;
     font-family: 'Lobster', sans-serif;
     font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
     font-family: 'Sedgwick Ave Display', cursive;
     font-family: 'Ubuntu', sans-serif;
-}
-.sedans p{
-    margin: 15px 35px;
-    width: 180px;
-    color: hsla(0, 0%, 100%, 0.75);
+    opacity: 70%;
     font-size: 15px;
+    color: hsl(229, 6%, 66%);
+    width: 78%;
+    line-height: 20px;
+}
+.hi h3{
+    margin-top: 25px;
+    margin-left: 30px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
     font-family: 'Big Shoulders Display', sans-serif;
     font-family: 'Lexend Deca', sans-serif;
     font-family: 'Lobster', sans-serif;
     font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
     font-family: 'Sedgwick Ave Display', cursive;
     font-family: 'Ubuntu', sans-serif;
-    line-height: 22px;
+    color: hsl(234, 12%, 34%);
 }
-.sedans button{
-    margin: 50px 35px;
-    padding: 10px 36px;
-    border-radius: 20px;
-    border: none;
-    background-color: hsl(0, 0%, 95%);
-    color: hsl(31, 77%, 52%);
-    font-family: 'Big Shoulders Display', sans-serif;
-    font-family: 'Lexend Deca', sans-serif;
-    font-family: 'Lobster', sans-serif;
-    font-family: 'Permanent Marker', cursive;
-    font-family: 'Sedgwick Ave Display', cursive;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight:600;
-    cursor: pointer;
+.low{
+    border-top: 4px solid hsl(34, 97%, 64%);
+    background-color: white;
+    width: 27%;
+    border-radius: 8px;
+    height: 210px;
+    filter: drop-shadow(3px 5px 7px rgba(161, 161, 161, 0.7));  
 }
-.sedans button:hover{
-    background-color: inherit;
-    border: 2px solid hsl(0, 0%, 95%);
-    color: hsl(0, 0%, 95%);
-    font-weight:100;
+.low svg{
+    margin-left:270px;
+    margin-top: 25px;
 }
 
-.suvs{
-    width: 19%;
-    background-color: hsl(184, 100%, 22%);
-    height: 390px;
-}
-.suvs svg{
-    margin: 30px 35px;
-}
-.suvs h2{
-    color: hsl(0, 0%, 95%);
-    margin: 0px 35px;
+.low p{
+    margin-top: 10px;
+    margin-left: 30px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
     font-family: 'Big Shoulders Display', sans-serif;
     font-family: 'Lexend Deca', sans-serif;
     font-family: 'Lobster', sans-serif;
     font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
     font-family: 'Sedgwick Ave Display', cursive;
     font-family: 'Ubuntu', sans-serif;
-}
-.suvs p{
-    margin: 15px 35px;
-    width: 190px;
-    color: hsla(0, 0%, 100%, 0.75);
+    opacity: 70%;
     font-size: 15px;
+    color: hsl(229, 6%, 66%);
+    width: 78%;
+    line-height: 20px;
+}
+.low h3{
+    margin-top: 25px;
+    margin-left: 30px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
     font-family: 'Big Shoulders Display', sans-serif;
     font-family: 'Lexend Deca', sans-serif;
     font-family: 'Lobster', sans-serif;
     font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
     font-family: 'Sedgwick Ave Display', cursive;
     font-family: 'Ubuntu', sans-serif;
-    line-height: 22px;
+    color: hsl(234, 12%, 34%);
 }
-.suvs button{
-    margin: 50px 35px;
-    padding: 10px 36px;
-    border-radius: 20px;
-    border: none;
-    background-color: hsl(0, 0%, 95%);
-    color: hsl(184, 100%, 22%);
+.width{
+    margin-top: -25%;
+    margin-left: 140px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+}
+.left{
+    border-top: 4px solid hsl(180, 62%, 55%);
+    background-color: white;
+    width: 27%;
+    border-radius: 8px;
+    height: 210px;
+    filter: drop-shadow(3px 5px 7px rgba(161, 161, 161, 0.7));  
+}
+.left svg{
+    margin-left:240px;
+    margin-top: 25px;
+}
+.left p{
+    margin-top: 10px;
+    margin-left: 30px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
     font-family: 'Big Shoulders Display', sans-serif;
     font-family: 'Lexend Deca', sans-serif;
     font-family: 'Lobster', sans-serif;
     font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
     font-family: 'Sedgwick Ave Display', cursive;
     font-family: 'Ubuntu', sans-serif;
-    font-weight:600;
-    cursor: pointer;
-}
-.suvs button:hover{
-    background-color: inherit;
-    border: 2px solid hsl(0, 0%, 95%);
-    color: hsl(0, 0%, 95%);
-    font-weight:100;
-}
-
-.luxury{
-    width: 19%;
-    background-color: hsl(179, 100%, 13%);
-    height: 390px;
-    border-top-right-radius: 7px;
-    border-bottom-right-radius: 7px;
-}
-.luxury svg{
-    margin: 30px 35px;
-}
-.luxury h2{
-    color: hsl(0, 0%, 95%);
-    margin: 0px 35px;
-    font-family: 'Big Shoulders Display', sans-serif;
-    font-family: 'Lexend Deca', sans-serif;
-    font-family: 'Lobster', sans-serif;
-    font-family: 'Permanent Marker', cursive;
-    font-family: 'Sedgwick Ave Display', cursive;
-    font-family: 'Ubuntu', sans-serif;
-}
-.luxury p{
-    margin: 15px 35px;
-    width: 200px;
-    color: hsla(0, 0%, 100%, 0.75);
+    opacity: 70%;
     font-size: 15px;
+    color: hsl(229, 6%, 66%);
+    width: 78%;
+    line-height: 20px;
+}
+.left h3{
+    margin-top: 25px;
+    margin-left: 30px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
     font-family: 'Big Shoulders Display', sans-serif;
     font-family: 'Lexend Deca', sans-serif;
     font-family: 'Lobster', sans-serif;
     font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
     font-family: 'Sedgwick Ave Display', cursive;
     font-family: 'Ubuntu', sans-serif;
-    line-height: 22px;
+    color: hsl(234, 12%, 34%);
 }
-.luxury button{
-    margin: 50px 35px;
-    padding: 10px 36px;
-    border-radius: 20px;
-    border: none;
-    background-color: hsl(0, 0%, 95%);
-    color: hsl(179, 100%, 13%);
+.right{
+    border-top: 4px solid hsl(212, 86%, 64%);
+    background-color: white;
+    width: 27%;
+    border-radius: 8px;
+    height: 210px;
+    filter: drop-shadow(3px 5px 7px rgba(161, 161, 161, 0.7));
+    margin-right: 140px;  
+}
+.right svg{
+    margin-left:240px;
+    margin-top: 25px;
+}
+.right p{
+    margin-top: 10px;
+    margin-left: 30px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
     font-family: 'Big Shoulders Display', sans-serif;
     font-family: 'Lexend Deca', sans-serif;
     font-family: 'Lobster', sans-serif;
     font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
     font-family: 'Sedgwick Ave Display', cursive;
     font-family: 'Ubuntu', sans-serif;
-    font-weight:600;
-    cursor: pointer;
+    opacity: 70%;
+    font-size: 15px;
+    color: hsl(229, 6%, 66%);
+    width: 78%;
+    line-height: 20px;
 }
-.luxury button:hover{
-    background-color: inherit;
-    border: 2px solid hsl(0, 0%, 95%);
-    color: hsl(0, 0%, 95%);
-    font-weight:100;
+.right h3{
+    margin-top: 25px;
+    margin-left: 30px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-family: 'Big Shoulders Display', sans-serif;
+    font-family: 'Lexend Deca', sans-serif;
+    font-family: 'Lobster', sans-serif;
+    font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Sedgwick Ave Display', cursive;
+    font-family: 'Ubuntu', sans-serif;
+    color: hsl(234, 12%, 34%);
 }
-@media(max-width:375px){
-    .container{
-        display:block;
-        margin-top: 20px;
-        width: 100%;
-        margin-left: 22px;
+@media (max-width:375px){
+    .width{
+        display:flex;
+        flex-direction:column;
+        justify-content: space-between;
+        align-items: baseline;
     }
-    .sedans{
-        height: 340px;
-        width: 22%;
+    .title{
+        font-size: 23px;
+        margin-left: 0px;
+        text-align: center;
+        line-height: 35px;
     }
-    .sedans button{
-        margin: 5px 35px;
+    .tit{
+        font-size: 25px;
+        text-align: center;
+        margin-left: 0px;
     }
-    .sedans p{
-        width: 220px;
+    p{
+        text-align: center;
+        margin-left: 50px;
+        width: 75%;
     }
-
-    .suvs{
-        height: 340px;
-        width: 22%;
+    .hi{
+        width: 90%;
     }
-    .suvs button{
-        margin: 5px 35px;
+    .hi p{
+        margin-left: 30px;
+        width: 80%;
+        text-align: start;
     }
-    .suvs p{
-        width: 220px;
+    .hi svg{
+        margin-left: 240px;
     }
-
-    .luxury{
-        height: 340px;
-        width: 22%;
+    .low{
+        width: 90%;
     }
-    .luxury button{
-        margin: 5px 35px;
+    .low p{
+        margin-left: 30px;
+        text-align: start;
     }
-    .luxury p{
-        width: 220px;
+    .low svg{
+        margin-left: 240px;
+    }
+    .left{
+        width: 138%;
+        margin-top: -390px;
+        position: relative;
+        left: -110px;
+    }
+    .right{
+        width: 141%;
+        margin-top: 490px;
+        position: relative;
+        left: -113px;
+        margin-bottom: 50px;
+    }
+    .hight{
+        margin-left: 10px;
+        position: relative;
+        top: 200px;
+    }
+    .left p{
+        text-align: start;
+    }
+    .right p{
+        text-align: start;
     }
 }
